# cpp-crapola

./: .gitignore  .travis.yml  LICENSE  Makefile.am  README.md  config.h.in  configure.ac  mock-travis.sh
.travis/: after_failure.sh  after_script.sh  after_success.sh  before_install.sh  before_script.sh  install.sh  script.sh
backtrace/: bt.cpp  bt.hpp  main.cpp
bt/: backtrace.cpp
linkedlist/: ll.hpp  rev.cpp  rev.hpp
ll/: ll.hpp  rev.cpp  rev.hpp
morton/: main.cpp
scripts/: _disp.sh  _do_or_die.sh  _install_if_missing.sh  _merge.sh  _noisy.sh  _quiet.sh
sparsity/: main.cpp
travis/: script.sh
